# kim-tools

./: .codecov.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  MANIFEST.in  NEWS.md  README.md  pyproject.toml  setup.py
.github/: testing.yml
.github/workflows/: release.yml  testing.yml  todos-to-issues.yml
crystal_genome_util/: aflow_util.py
crystal_genome_util/data/: README_PROTO.TXT
docs/: requirements-docs.txt
docs/source/: conf.py  index.rst  kim_test_utils.aflow_util.rst  kim_test_utils.rst  kim_test_utils.test_driver.rst  kim_tools.aflow_util.rst  kim_tools.ase.rst  kim_tools.rst  kim_tools.symmetry_util.rst  kim_tools.test_driver.rst  kim_tools.vc.rst  modules.rst  structure_table.csv  (+8 more)
examples/: README.txt
kim_test_utils/: __init__.py
kim_tools/: __init__.py  kimunits.py
scripts/: GENPOS_matrices_no_centering.json  cell_param_solver.nb  data_generation.ipynb  possible_primitive_shifts.json  primitivize_fractional_vector.json  translation_coset_representatives.json  translation_parts.json
tests/: A2B11_cP39_200_f_aghij.POSCAR  basic_match_counts_by_pearson.json  basic_match_counts_by_spacegroup.json  benchmarking_query.json  conftest.py  create_test_set.py  elastic_excerpt.py  environment.yml  install_commands.sh  lj_fail_no_neighbors.py  test_A2B11_cP39_200_f_aghij.ipynb  test_AFLOW.ipynb  test_AFLOW.out  test_AFLOW.py  test_CrystalGenomeTest.py  test_KIMTest.py  test_aflow_util.py  test_ase.py  test_commands.sh  test_generator.json  test_structures.json  test_symmetry_util.py  test_test_driver.py  test_vc.py  util.py
(+37 files in other folders)
